# vshell

./: Cargo.toml  README.md  build.rs  i18n.toml
i18n/en/: vshell.ftl
i18n/nb/: vshell.ftl
src/: config.rs  error.rs  logging.rs  macros.rs  main.rs  shell.rs
src/architecture/: mod.rs
src/architecture/cli/: mod.rs
src/architecture/i18n/: mod.rs
src/architecture/ipc/: mod.rs  request.rs  response.rs
src/architecture/ipc/client/: mod.rs
src/architecture/ipc/server/: debug.rs  handle_response.rs  mod.rs
src/architecture/logging/: mod.rs
src/architecture/storage/: mod.rs
src/architecture/storage/file/: mod.rs
src/architecture/storage/redb/: mod.rs
src/architecture/theme/: color.rs  css.rs  format.rs  mod.rs  scheme.rs  style.rs  template.rs
src/architecture/theme/md3/: mod.rs
src/architecture/theme/template/: mod.rs
src/services/theme/: mod.rs  style.rs
