[package]
name = "vshell"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9.2", features = ["v4_16"] }
gtk4-layer-shell = { version = "0.4.0" }
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
dirs = "5.0.1"
universal-config = { version = "0.5.0", default-features = false, features = ["toml"] }
tracing = "0.1.41"
grass = "0.13.4"
notify = { version = "7.0.0", default-features = false }
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
    "sync",
    "io-util",
    "net",
] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
color-eyre = "0.6.3"
tracing-error = "0.2.1"
strip-ansi-escapes = "0.2.0"
