[package]
name = "vshell"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9.2", features = ["v4_16"] }
gtk4-layer-shell = { version = "0.4.0" }
serde = { version = "1.0.216", features = ["derive"] }
dirs = "6.0.0"
tracing = "0.1.41"
grass = "0.13.4"
notify = { version = "8.0.0", default-features = false }
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
    "sync",
    "io-util",
    "net",
] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
color-eyre = "0.6.3"
tracing-error = "0.2.1"
strip-ansi-escapes = "0.2.0"
clap = { version = "4.5.26", features = ["derive"] }
ctrlc = "3.4.5"
rmp-serde = "1.3.0"
i18n-embed = { version = "0.15.3", features = ["fluent-system", "desktop-requester"] }
rust-embed = "8.5.0"
i18n-embed-fl = "0.9.3"
once_cell = "1.20.2"
redb = "2.4.0"
upon = { version = "0.9.0" }
material-colors = { version = "0.4.2", features = ["image", "serde"] }
colorsys = "0.6.7"
expanduser = "1.2.2"
universal-config = { version = "0.5.0", git = "https://github.com/jakestanger/universal-config-rs", default-features = false, features = ["corn", "kdl"] }

[build-dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.42"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
